@@ -6,7 +6,7 @@ import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.never;
 
 import com.tissue.common.enums.SupportedLanguage;
-import com.tissue.common.vo.EntityReference;
+import com.tissue.global.vo.EntityReference;
 import com.tissue.notification.application.port.out.NotificationPreferenceRepository;
 import com.tissue.notification.domain.Notification;
 import com.tissue.notification.domain.NotificationPreference;
@@ -50,24 +50,30 @@ class NotificationProcessorTest {
     @Nested
     @DisplayName("process notifications")
     class ProcessNotification {
+
         @Test
         @DisplayName("success: sends email if enabled in preference (default true)")
         void success_Process() {
-            sut = new NotificationProcessor(List.of(emailSender), preferenceRepository, Runnable::run);
+            sut = new NotificationProcessor(List.of(emailSender), preferenceRepository,
+                Runnable::run);
 
             Notification notification = Notification.builder()
-                    .eventId(UUID.randomUUID())
-                    .notificationType(NotificationType.ISSUE_CREATED)
-                    .entityReference(EntityReference.forIssue("TESTWS", "TESTPROJ", "TESTPROJ-1", 1L))
-                    .actorMemberId(2L)
-                    .receiverMemberId(1L)
-                    .receiverEmail("test@test.com")
-                    .receiverLanguage(SupportedLanguage.EN)
-                    .message(new NotificationMessage(Map.of()))
-                    .build();
+                                                    .eventId(UUID.randomUUID())
+                                                    .notificationType(
+                                                        NotificationType.ISSUE_CREATED)
+                                                    .entityReference(
+                                                        EntityReference.forIssue("TESTWS",
+                                                            "TESTPROJ", "TESTPROJ-1", 1L))
+                                                    .actorMemberId(2L)
+                                                    .receiverMemberId(1L)
+                                                    .receiverEmail("test@test.com")
+                                                    .receiverLanguage(SupportedLanguage.EN)
+                                                    .message(new NotificationMessage(Map.of()))
+                                                    .build();
 
-            given(preferenceRepository.findAllByWorkspaceKeyAndReceiverMemberIdIn("TESTWS", List.of(1L)))
-                    .willReturn(Collections.emptyList());
+            given(preferenceRepository.findAllByWorkspaceKeyAndReceiverMemberIdIn("TESTWS",
+                List.of(1L)))
+                .willReturn(Collections.emptyList());
 
             sut.process(List.of(notification));
 
@@ -77,27 +83,32 @@ class NotificationProcessorTest {
         @Test
         @DisplayName("success: does not send if disabled in preference")
         void success_SkipIfDisabled() {
-            sut = new NotificationProcessor(List.of(emailSender), preferenceRepository, Runnable::run);
+            sut = new NotificationProcessor(List.of(emailSender), preferenceRepository,
+                Runnable::run);
 
             Notification notification = Notification.builder()
-                    .eventId(UUID.randomUUID())
-                    .notificationType(NotificationType.ISSUE_CREATED)
-                    .entityReference(EntityReference.forIssue("TESTWS", "TESTPROJ", "TESTPROJ-1", 1L))
-                    .actorMemberId(2L)
-                    .receiverMemberId(1L)
-                    .receiverEmail("test@test.com")
-                    .receiverLanguage(SupportedLanguage.EN)
-                    .message(new NotificationMessage(Map.of()))
-                    .build();
+                                                    .eventId(UUID.randomUUID())
+                                                    .notificationType(
+                                                        NotificationType.ISSUE_CREATED)
+                                                    .entityReference(
+                                                        EntityReference.forIssue("TESTWS",
+                                                            "TESTPROJ", "TESTPROJ-1", 1L))
+                                                    .actorMemberId(2L)
+                                                    .receiverMemberId(1L)
+                                                    .receiverEmail("test@test.com")
+                                                    .receiverLanguage(SupportedLanguage.EN)
+                                                    .message(new NotificationMessage(Map.of()))
+                                                    .build();
 
             NotificationPreference pref = NotificationPreference.builder()
-                    .workspaceKey("TESTWS")
-                    .receiverMemberId(1L)
-                    .build();
+                                                                .workspaceKey("TESTWS")
+                                                                .receiverMemberId(1L)
+                                                                .build();
             pref.updatePreference(NotificationChannel.EMAIL, NotificationType.ISSUE_CREATED, false);
 
-            given(preferenceRepository.findAllByWorkspaceKeyAndReceiverMemberIdIn("TESTWS", List.of(1L)))
-                    .willReturn(List.of(pref));
+            given(preferenceRepository.findAllByWorkspaceKeyAndReceiverMemberIdIn("TESTWS",
+                List.of(1L)))
+                .willReturn(List.of(pref));
 
             sut.process(List.of(notification));
 
